--- a/styles.css
+++ b/styles.css
@@ -324,11 +324,34 @@ button:active{
     font-size: 2.5vh;
 }
 
+.main .book .closer{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    font-size: 2.5vh;
+    background-color: transparent;
+    border: 0px;
+    box-shadow: 0 4px 10px rgba(248, 0, 0, 0.307);
+    transition: transform 1.25s ease;
+}
+
+.main .book .closer:hover, .main .book .closer:focus{
+    transform: scale(1.05);
+}
+
+body.dark .main .book .closer{
+    box-shadow: 0 4px 10px rgba(255, 255, 255, 0.5);
+}
+
 .main .book.active{
     box-shadow: 0 4px 10px rgba(64, 255, 0, 0.307); 
     text-decoration: line-through;
     background-color: #6f6d6d;
-    color: whitesmoke
+    color: whitesmoke;
+}
+
+.main .book.active .closed{
+    box-shadow: 0 4px 10px rgba(255, 255, 255, 0.5);
 }
 
 
